# dapr-swe

./: .gitignore  README.md  pyproject.toml
src/: TEST_MARKER.txt  config.py  events.py  main.py
src/actions/: handlers.py
src/agents/: __init__.py  developer.py  planner.py  reviewer.py
src/prompts/: __init__.py  planner.py
src/tools/: __init__.py  github.py  sandbox.py  web.py
src/webhook/: github.py
src/workflow/: activities.py
